--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Flask==3.0.0
 gunicorn==20.0.4
-pandas==1.5.3
+matplotlib==3.8.1
+numpy==1.26.1
+pandas==2.1.2
+pillow==10.1
 pytest==7.1.2
 python-cmr==0.9.0
 python-dateutil==2.8.2
