--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ matplotlib==3.8.1
 numpy==1.26.1
 pandas==2.1.2
 pillow==10.1
+plotly==5.18.0
 pytest==7.1.2
 python-cmr==0.9.0
 python-dateutil==2.8.2
